# grav-sim-cpu

./: .gitignore  CMakeLists.txt  README.md  generation.cfg  main.cpp  simulation.cfg
dev-tools/: color-array-generator.py  colormap-array-generator.py
include/: Body.hpp  BodyGenerator.hpp  CoM.hpp  QuadTree.hpp  Sim.hpp  colormap.hpp  common.hpp  config.hpp  parameters.hpp
src/: BodyGenerator.cpp  QuadTree.cpp  Sim.cpp  parameters.cpp
